After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762253 - Privacy page: header bar is missing a heading
Privacy page: header bar is missing a heading
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-18 09:34 UTC by Allan Day
Modified: 2016-02-19 02:32 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allan Day 2016-02-18 09:34:06 UTC
All the other pages have a heading in the header bar. Privacy doesn't.

It should probably say "Privacy".