privacy: Set a page title

All the other pages do.
https://bugzilla.gnome.org/show_bug.cgi?id=762253